Added to docs, preprocessing, eda visualizations, and ci framework

--- a/02_forecasting.ipynb
+++ b/02_forecasting.ipynb
@@ -4,30 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 02 Forecasting"
+    "## 02 Forecasting"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Overview"
+    "### Overview"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Load Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##### Load "
+    "### Load Data"
    ]
   },
   {
