Some eda updates, significant progress on RL agent

--- a/01_eda.ipynb
+++ b/01_eda.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Data"
+    "### Load and Preprocess Data"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "con = ibis.connect(\"duckdb://\")\n",
-    "data_path = 'data_staged/'"
+    "data_path = 'data_eda/'"
    ]
   },
   {
@@ -252,7 +252,7 @@
     "    #Convert to snake-case\n",
     "    fred_datasets[key] = fred_datasets[key].rename('ALL_CAPS')\n",
     "\n",
-    "    #Drop unused rows \n",
+    "    #Drop unused rows - but keep some in 2006 to support forward fill\n",
     "    fred_datasets[key] = fred_datasets[key].filter(fred_datasets[key].DATE.year() > 2005)\n",
     "\n",
     "# Convert string to float64 in consumer sentiment data   \n",
@@ -268,7 +268,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Merge Datasets"
+    "##### Merge Datasets & Forward Fill Missing Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While the datasets all cover the desired 2007-2024 date range, the specific dates covered by each dataset vary widely. "
    ]
   },
   {
@@ -277,6 +284,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # Merge all tables from the Investing.com dataset\n",
+    "# inv_data = prep.merge_tables(\n",
+    "#     inv_datasets, \n",
+    "#     join_key = 'DATE',\n",
+    "#     join_type = 'outer')\n",
+    "\n",
+    "# # Merge all tables from the FRED dataset together\n",
+    "# fred_data = prep.merge_tables(\n",
+    "#     fred_datasets, \n",
+    "#     join_key = 'DATE', \n",
+    "#     join_type = 'outer')\n",
+    "\n",
+    "# # Bring dates from inv table into FRED so values can be imputed\n",
+    "# fred_data = prep.merge_tables(\n",
+    "#     tables_to_merge={\n",
+    "#         'fred' : fred_data,\n",
+    "#         'inv' : inv_data.select('DATE')\n",
+    "#     },\n",
+    "#     join_key = 'DATE',\n",
+    "#     join_type = 'outer'\n",
+    "# )\n",
+    "\n",
+    "# # Run the forward-fill imputation - fred data\n",
+    "# fred_data = prep.impute_forward_fill(\n",
+    "#     data = fred_data,\n",
+    "#     sort_by = 'DATE')\n",
+    "\n",
+    "# # Filter out early nulls from FRED\n",
+    "# fred_data = fred_data.filter(fred_data.DATE.year() > 2006)\n",
+    "\n",
+    "# # Run the forward-fill imputation - investing.com data\n",
+    "# # TODO decide whether to keep this\n",
+    "# inv_data = prep.impute_forward_fill(\n",
+    "#     data = inv_data,\n",
+    "#     sort_by = 'DATE')\n",
+    "\n",
+    "# # Finally, merge the investing.com and FRED data\n",
+    "# # Using an inner join to exclude any days which aren't trading days\n",
+    "# data = prep.merge_tables(\n",
+    "#     {\n",
+    "#         'inv' : inv_data, \n",
+    "#         'fred' : fred_data,\n",
+    "#     },\n",
+    "#     join_key = 'DATE',\n",
+    "#     join_type='inner')\n",
+    "\n",
+    "# # TODO For TRADING_DAY columns,  fill in NaNs with FALSE \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
     "# Merge all tables from the Investing.com dataset\n",
     "inv_data = prep.merge_tables(\n",
     "    inv_datasets, \n",
@@ -289,41 +352,41 @@
     "    join_key = 'DATE', \n",
     "    join_type = 'outer')\n",
     "\n",
-    "# Bring dates from inv table into FRED so values can be imputed\n",
-    "fred_data = prep.merge_tables(\n",
-    "    tables_to_merge={\n",
-    "        'fred' : fred_data,\n",
-    "        'inv' : inv_data.select('DATE')\n",
-    "    },\n",
-    "    join_key = 'DATE',\n",
-    "    join_type = 'outer'\n",
-    ")\n",
-    "\n",
-    "# Run the forward-fill imputation - fred data\n",
-    "fred_data = prep.impute_forward_fill(\n",
-    "    data = fred_data,\n",
-    "    sort_by = 'DATE')\n",
-    "\n",
     "# Filter out early nulls from FRED\n",
     "fred_data = fred_data.filter(fred_data.DATE.year() > 2006)\n",
     "\n",
-    "# Run the forward-fill imputation - investing.com data\n",
-    "# TODO decide whether to keep this\n",
-    "inv_data = prep.impute_forward_fill(\n",
-    "    data = inv_data,\n",
-    "    sort_by = 'DATE')\n",
+    "# Create a table with all of the dates in range\n",
+    "daterange = []\n",
+    "current_date = datetime.date(2006,1,1)\n",
+    "while current_date <= datetime.date(2024, 10, 31):\n",
+    "    daterange.append(current_date)\n",
+    "    current_date = current_date + datetime.timedelta(days=1)\n",
+    "daterange = pd.DataFrame(daterange, columns=['DATE'])\n",
     "\n",
-    "# Finally, merge the investing.com and FRED data\n",
-    "# Using an inner join to exclude any days which aren't trading days\n",
+    "# Finally, merge the investing.com, FRED data, and daterange\n",
+    "# using an outer join to ensure there is a row for every date\n",
     "data = prep.merge_tables(\n",
     "    {\n",
     "        'inv' : inv_data, \n",
     "        'fred' : fred_data,\n",
+    "        'dates': daterange\n",
     "    },\n",
     "    join_key = 'DATE',\n",
-    "    join_type='inner')\n",
+    "    join_type='outer')\n",
     "\n",
-    "# TODO For TRADING_DAY columns,  fill in NaNs with FALSE \n"
+    "# Forward-fill impute all numeric data \n",
+    "data = prep.impute_forward_fill_numerics(\n",
+    "    data = data,\n",
+    "    sort_by = 'DATE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.filter(data.DATE.year() >= 2007).filter(data.DATE.year() <= 2019).to_pandas()"
    ]
   },
   {
@@ -341,14 +404,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_pandas().isna().sum()"
+    "df.isna().sum()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Data Interpretability & Availability Corrections"
+    "##### Data Comparability"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comparisons over time can be improved by calculating real (inflation-corrected) prices and adjusting housing starts to a per-capita rate.  This will also take some of the trends out of the data, improving stationarity for forecasting purposes."
    ]
   },
   {
@@ -370,7 +440,22 @@
    "outputs": [],
    "source": [
     "# TODO Add a US_Housing_Starts_Per_Capita column \n",
+    "# TODO would need to bring in population indicator\n",
     "# to provide a clearer economic health indicator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Data Availability Corrections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data that is not yet available at prediction time can't be used to make predictions.  Many macroeconomic indicators are unavailable for weeks or months after the dates they pertain to as the underlying data must be reported and processed.  At this point, we'll avoid this concern by lagging all macroeconomic indicators by 90 days."
    ]
   },
   {
@@ -409,15 +494,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO Add RATIO columns looking at the relative prices of pairs of commodities?"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -439,10 +515,10 @@
    "source": [
     "training_end_year = 2019\n",
     "\n",
-    "# Split the data into model development (2007 to 2019) \n",
+    "# Split the data into model development (2007-01-01 to 2019-12-31) \n",
     "dev_data = data.filter(data.DATE.year() >= 2007).filter(data.DATE.year() <= training_end_year)\n",
     "\n",
-    "# and final holdout (2020 to late 2024)\n",
+    "# and final holdout (2020-01-01 to 2024-10-31)\n",
     "holdout_data = data.filter(data.DATE.year() > training_end_year)"
    ]
   },
@@ -531,14 +607,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For forecasting, features should be stationary, meaning that no significant trends or seasonal patterns should be present in the data.  The mean and variance should be consistent throughout the time period."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These are clearly not stationary.  The trends are enormous, and while seasonality is difficult to detect at this level, it's almost certainly present."
+    "For forecasting, features should be stationary, meaning that no significant trends or seasonal patterns should be present in the data.  The mean and variance should be consistent throughout the time period.\n",
+    "\n",
+    "No features are stationary without differencing.  The trends are enormous, and while seasonality is difficult to detect at this level, it's almost certainly present.  Many of these look pretty good at first differencing, but some definitely need to be differenced at least one more time."
    ]
   },
   {
@@ -559,87 +630,7 @@
     "df = dev_data.select(column_list).to_pandas()\n",
     "df['DATE'] = pd.to_datetime(df['DATE'])\n",
     "df = df.sort_values('DATE')\n",
-    "fig, axes = vis.plot_pairwise_time_series_matrix(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Many of these look pretty good at first differencing, but some definitely need to be differenced at least one more time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO Develop visualization with 3-5 columns of time series charts \n",
-    "# (original data, diff1, diff2, diff3...)\n",
-    "# with one row of charts for each series "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Take the first few differences to see how many iterations it'll take \n",
-    "# to get to stationarity\n",
-    "diff1 = dev_data.select(column_list).to_pandas()\n",
-    "diff1['DATE'] = pd.to_datetime(diff1['DATE'])\n",
-    "diff1 = diff1.sort_values('DATE')\n",
-    "diff1[diff1.columns.drop('DATE')] = diff1[diff1.columns.drop('DATE')].diff().dropna()\n",
-    "fig, axes = vis.plot_pairwise_time_series_matrix(diff1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Far fewwer concerns regarding stationarity at second differencing, but there are still some suspicious sections in some of these series."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diff2 = dev_data.select(column_list).to_pandas()\n",
-    "diff2['DATE'] = pd.to_datetime(diff2['DATE'])\n",
-    "diff2 = diff2.sort_values('DATE')\n",
-    "diff2[diff2.columns.drop('DATE')] = diff2[diff2.columns.drop('DATE')].diff().diff().dropna()\n",
-    "fig, axes = vis.plot_pairwise_time_series_matrix(diff2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = dev_data.select(['DATE','copper_PRICE']).to_pandas()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['DATE'] = pd.to_numeric(pd.to_datetime(df['DATE']))"
+    "fig, axes = vis.plot_time_series_diffs(df)"
    ]
   },
   {
@@ -670,7 +661,7 @@
     "stationarity_tests = {\n",
     "    'adfuller' :  adfuller(df['copper_Price']),\n",
     "    'kpss' : kpss(df['copper_Price']) \n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -696,7 +687,8 @@
    "source": [
     "Key tools:\n",
     "- [skforecast](https://skforecast.org/)\n",
-    "- [pmdarima](https://github.com/alkaline-ml/pmdarima) "
+    "- [pmdarima](https://github.com/alkaline-ml/pmdarima)\n",
+    "- [sklearn scaling]()"
    ]
   },
   {
@@ -705,8 +697,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from skforecast.sarimax import Sarimax"
+    "from skforecast.sarimax import Sarimax\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Remove Nontrading Days"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, all required lags and moving-average values have been calculated.  For calculating deltas, we will only want trading days. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -723,7 +751,7 @@
    "source": [
     "df = dev_data.to_pandas()\n",
     "df['DATE'] = pd.to_datetime(df['DATE'])\n",
-    "pdq = (1,2,1) # p autoregression lags, d differences, q moving average\n",
+    "pdq = (1,1,1) # p autoregression lags, d differences, q moving average\n",
     "model = Sarimax(order = pdq)\n",
     "model.fit(\n",
     "    y = df['copper_PRICE'])\n",
@@ -734,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Simple ARIMAX Model"
+    "##### Simple ARIMAX Models"
    ]
   },
   {
@@ -750,16 +778,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "df = dev_data.to_pandas()\n",
     "exog_cols = [col for col in df.columns if '_OPEN' in col]\n",
     "exog = df[exog_cols]\n",
-    "pdq = (1,2,1) # p autoregression lags, d differences, q moving average\n",
+    "pdq = (1,1,1) # p autoregression lags, d differences, q moving average\n",
     "model = Sarimax(order = pdq)\n",
     "model.fit(\n",
     "    y = df['copper_PRICE'],\n",
     "    exog = exog)\n",
     "model.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dev_data.to_pandas()\n",
+    "(df['copper_OPEN'] - df['copper_OPEN'].mean())/df['copper_OPEN'].std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = dev_data.to_pandas()\n",
+    "exog_cols = [col for col in df.columns if '_OPEN' in col]\n",
+    "exog = df[exog_cols]\n",
+    "exog = exog.drop(['natural-gas_OPEN','gold_OPEN','corn_OPEN'], axis='columns')\n",
+    "exog = (exog - exog.mean())/exog.std()\n",
+    "\n",
+    "target = df['copper_PRICE']\n",
+    "target = (target - target.mean())/target.std()\n",
+    "\n",
+    "pdq = (1,1,1) # p autoregression lags, d differences, q moving average\n",
+    "model = Sarimax(order = pdq)\n",
+    "model.fit(\n",
+    "    y = target,\n",
+    "    exog = exog)\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
