Decisioning and learning almost functional

--- a/03_decisioning.ipynb
+++ b/03_decisioning.ipynb
@@ -9312,27 +9312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2791"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dev_df = dev_df[dev_df['DATE'].dt.year > 2008].dropna()"
+    "dev_df = dev_df[dev_df['DATE'].dt.year >= 2008].dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9349,7 +9338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9364,7 +9353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9375,7 +9364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -9399,317 +9388,120 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>DATE</th>\n",
        "      <th>COPPER_OPEN_NOMINAL_DELTA_PRED</th>\n",
        "      <th>COPPER_OPEN_NOMINAL_DELTA_PRED_BINS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>252</th>\n",
+       "      <td>2008-01-02</td>\n",
+       "      <td>-0.071276</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>253</th>\n",
+       "      <td>2008-01-03</td>\n",
+       "      <td>-0.041131</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>2008-01-04</td>\n",
+       "      <td>-0.000145</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>255</th>\n",
+       "      <td>2008-01-07</td>\n",
+       "      <td>0.097101</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
+       "      <th>256</th>\n",
+       "      <td>2008-01-08</td>\n",
+       "      <td>0.045492</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3291</th>\n",
+       "      <td>2019-12-24</td>\n",
+       "      <td>0.007298</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3292</th>\n",
+       "      <td>2019-12-25</td>\n",
        "      <td>0.003538</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3293</th>\n",
+       "      <td>2019-12-26</td>\n",
        "      <td>0.003721</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3294</th>\n",
+       "      <td>2019-12-27</td>\n",
        "      <td>0.006904</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3295</th>\n",
+       "      <td>2019-12-30</td>\n",
        "      <td>0.003628</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3296</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3297 rows × 2 columns</p>\n",
+       "<p>3044 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      COPPER_OPEN_NOMINAL_DELTA_PRED  COPPER_OPEN_NOMINAL_DELTA_PRED_BINS\n",
-       "0                                NaN                                   10\n",
-       "1                                NaN                                   10\n",
-       "2                                NaN                                   10\n",
-       "3                                NaN                                   10\n",
-       "4                                NaN                                   10\n",
-       "...                              ...                                  ...\n",
-       "3292                        0.003538                                    6\n",
-       "3293                        0.003721                                    6\n",
-       "3294                        0.006904                                    7\n",
-       "3295                        0.003628                                    6\n",
-       "3296                             NaN                                   10\n",
+       "           DATE  COPPER_OPEN_NOMINAL_DELTA_PRED  \\\n",
+       "252  2008-01-02                       -0.071276   \n",
+       "253  2008-01-03                       -0.041131   \n",
+       "254  2008-01-04                       -0.000145   \n",
+       "255  2008-01-07                        0.097101   \n",
+       "256  2008-01-08                        0.045492   \n",
+       "...         ...                             ...   \n",
+       "3291 2019-12-24                        0.007298   \n",
+       "3292 2019-12-25                        0.003538   \n",
+       "3293 2019-12-26                        0.003721   \n",
+       "3294 2019-12-27                        0.006904   \n",
+       "3295 2019-12-30                        0.003628   \n",
        "\n",
-       "[3297 rows x 2 columns]"
+       "      COPPER_OPEN_NOMINAL_DELTA_PRED_BINS  \n",
+       "252                                     0  \n",
+       "253                                     0  \n",
+       "254                                     5  \n",
+       "255                                    10  \n",
+       "256                                    10  \n",
+       "...                                   ...  \n",
+       "3291                                    7  \n",
+       "3292                                    6  \n",
+       "3293                                    6  \n",
+       "3294                                    7  \n",
+       "3295                                    6  \n",
+       "\n",
+       "[3044 rows x 3 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dev_df[['COPPER_OPEN_NOMINAL_DELTA_PRED','COPPER_OPEN_NOMINAL_DELTA_PRED_BINS']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COPPER_OPEN_NOMINAL_DELTA_PRED</th>\n",
-       "      <th>COPPER_OPEN_NOMINAL_DELTA_PRED_BUCKETS</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0.000295</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>-0.014542</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.008863</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.005187</td>\n",
-       "      <td>6.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0.001096</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>-0.009117</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>0.001550</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>0.014845</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>0.019915</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>-0.018094</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>-0.000635</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>0.008047</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>0.054224</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    COPPER_OPEN_NOMINAL_DELTA_PRED  COPPER_OPEN_NOMINAL_DELTA_PRED_BUCKETS\n",
-       "0                              NaN                                     NaN\n",
-       "1                              NaN                                     NaN\n",
-       "2                              NaN                                     NaN\n",
-       "3                              NaN                                     NaN\n",
-       "4                              NaN                                     NaN\n",
-       "5                              NaN                                     NaN\n",
-       "6                              NaN                                     NaN\n",
-       "7                              NaN                                     NaN\n",
-       "8                              NaN                                     NaN\n",
-       "9                              NaN                                     NaN\n",
-       "10                             NaN                                     NaN\n",
-       "11                             NaN                                     NaN\n",
-       "12                        0.000295                                     5.0\n",
-       "13                       -0.014542                                     2.0\n",
-       "14                        0.008863                                     7.0\n",
-       "15                        0.005187                                     6.0\n",
-       "16                        0.001096                                     5.0\n",
-       "17                       -0.009117                                     3.0\n",
-       "18                        0.001550                                     5.0\n",
-       "19                        0.014845                                     8.0\n",
-       "20                        0.019915                                     8.0\n",
-       "21                       -0.018094                                     2.0\n",
-       "22                       -0.000635                                     5.0\n",
-       "23                        0.008047                                     7.0\n",
-       "24                        0.054224                                    10.0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[['COPPER_OPEN_NOMINAL_DELTA_PRED', 'COPPER_OPEN_NOMINAL_DELTA_PRED_BUCKETS']].head(25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fc_delta_breakpoints = [\n",
-    "    -0.045, \n",
-    "    -0.024,\n",
-    "    -0.011,\n",
-    "    -0.003,\n",
-    "    0.003,\n",
-    "    0.011,\n",
-    "    0.024,\n",
-    "    0.045]\n"
+    "dev_df[['DATE','COPPER_OPEN_NOMINAL_DELTA_PRED','COPPER_OPEN_NOMINAL_DELTA_PRED_BINS']]"
    ]
   },
   {
